# django_test_app

./: README.md  bench.py  docker-compose.yml  pyproject.toml  pytest.ini
apps/: urls.py
apps/survey/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/survey/migrations/: 0001_initial.py
deploy/: Dockerfile  dev.env  postgresql.conf
settings/: __init__.py  asgi.py  envconf.py  urls.py  wsgi.py
tests/: conftest.py
tests/factories/: survey.py
tests/survey/: test_survey_routers.py
