[project]
name = "django-test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.1.2",
    "django==5.2.13",
    "django-nested-admin>=4.1.6",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.4.14",
    "environ-config>=24.1.0",
    "factory-boy>=3.3.3",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-env>=1.6.0",
    "uvicorn>=0.44.0",
    "uvicorn-worker>=0.4.0",
]

